<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
<RadioGroup
      android:id="@+id/select"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
    >
      <RadioButton
        android:id="@+id/select1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_title1"
      >
      </RadioButton>

      <RadioButton
          android:id="@+id/select2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/select_title2" />

      <RadioButton
        android:id="@+id/select3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_title3"
      >
      </RadioButton>
        <RadioButton
        android:id="@+id/select4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_title4"
      >
      </RadioButton>
    </RadioGroup>
</LinearLayout>
