<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  <TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="请填写以下信息"
    >
    </TextView>
  <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/product_info1"
    >
    </TextView>>
    <EditText
      android:id="@+id/name"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content" 
    >
    </EditText>
     <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/product_info2"
    >
    </TextView>>
    <EditText
      android:id="@+id/occupation"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
    >
    </EditText>
     <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/product_info3"
    >
    </TextView>>
    <EditText
      android:id="@+id/fixedphone"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
    >
    </EditText>
     <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/product_info4"
    >
    </TextView>>
    <EditText
      android:id="@+id/mobilephone"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
    >
    </EditText>
     <Button
    android:id="@+id/draw"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="输入完毕"
    >
    </Button>

     <Button
         android:id="@+id/back"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/back_to_home" ></Button>
     
     
</LinearLayout>
